--- a/project.yaml
+++ b/project.yaml
@@ -1,12 +1,44 @@
 version: '3.0'
 
 expectations:
-  population_size: 1000
+  population_size: 10000
 
 actions:
 
-  generate_study_population:
-    run: cohortextractor:latest generate_cohort --output-format csv.gz --study-definition study_definition
+  # Extract data
+  generate_study_population_wave4:
+    run: >
+      cohortextractor:latest generate_cohort
+        --study-definition study_definition_wave4
+        --skip-existing
+        --output-format=csv.gz
     outputs:
       highly_sensitive:
-        cohort: output/input.csv.gz
+        cohort: output/input_wave4.csv.gz
+
+  # Process data
+  process_data_wave4:
+    run: r:latest analysis/data_process.R wave4
+    needs: [generate_study_population_wave4]
+    outputs:
+      highly_sensitive:
+        rds: output/processed/input_wave4.rds
+        
+  # Skim data
+  skim_data_wave4:
+    run: r:latest analysis/data_skim.R output/processed/input_wave4.rds output/data_properties
+    needs: [process_data_wave4]
+    outputs:
+      moderately_sensitive:
+        txt1: output/data_properties/input_wave4_skim.txt
+        txt2: output/data_properties/input_wave4_coltypes.txt
+        txt3: output/data_properties/input_wave4_tabulate.txt
+        
+  # Filter data
+  filter_data_wave4:
+    run: r:latest analysis/data_selection.R wave4
+    needs: [process_data_wave4]
+    outputs:
+      moderately_sensitive:
+        rds: output/filtered/input_wave4.rds
+        csv: output/flowchart/flowchart_wave4.csv
