Addition of subgroup tables

--- a/analysis/config.json
+++ b/analysis/config.json
@@ -13,17 +13,17 @@
         "ethnicity",
         "region",
         "imd",
-        "care_home",
-        "bmi",
-        "smoking_status_comb"
+        "care_home"
     ],
     "immunosuppression_vars" : [
         "organ_transplant",
         "organ_transplant_date",
-        "organ_transplant_cat",
         "bone_marrow_transplant",
         "bone_marrow_transplant_date",
-        "bone_marrow_transplant_cat",
+        "any_transplant",
+        "any_transplant_date",
+        "any_transplant_cat",
+        "any_transplant_cat_broad",
         "haem_cancer",
         "haem_cancer_date",
         "haem_cancer_cat",
@@ -35,12 +35,12 @@
         "immunosuppression_medication_cat",
         "immunosuppression_admin",
         "immunosuppression_admin_date",
-        "immunosuppression_admin_cat",
         "radio_chemo",
         "radio_chemo_date",
         "radio_chemo_cat"
     ],
     "comorbidity_vars" : [
+        "bmi",
         "asthma",
         "diabetes_controlled",
         "ckd_rrt",
@@ -59,23 +59,12 @@
         "multimorb_cat"
     ],
     "era_infection_vars" : [
-        "wt_start_date",
-        "wt_covid_cat",
-        "wt_covid_max_date",
-        "pre_alpha_infection_days",
-        "pre_alpha_infection_group",
-        "alpha_start_date",
-        "alpha_covid_cat",
-        "alpha_covid_max_date",
-        "pre_delta_infection_days",
-        "pre_delta_infection_group",
-        "delta_start_date",
-        "delta_covid_cat",
-        "delta_covid_max_date",
-        "pre_omicron_infection_days",
-        "pre_omicron_infection_group",
-        "omicron_start_date",
-        "omicron_positive_test_date"
+        "wave_start_date",
+        "wave_end_date",
+        "wave_covid_cat",
+        "wave_covid_max_date",
+        "pre_wave_infection_group",
+        "pre_wave_infection_days"
     ],
     "vaccination_vars" : [
         "covid_vax_date_1",
@@ -84,24 +73,30 @@
         "covid_vax_date_4",
         "covid_vax_date_5",
         "covid_vax_date_6",
-        "post_alpha_first_vax_date",
-        "post_delta_first_vax_date",
-        "post_omicron_first_vax_date",
-        "n_doses_delta",
-        "pre_delta_last_vax_date",
-        "pre_delta_vax_diff",
-        "pre_delta_vaccine_group",
-        "n_doses_omicron",
-        "pre_omicron_last_vax_date",
-        "pre_omicron_vax_diff",
-        "pre_omicron_vaccine_group"
+        "n_doses_wave",
+        "pre_wave_vaccine_group",
+        "pre_wave_last_vax_date",
+        "pre_wave_vax_diff"
     ],
     "outcome_vars" : [
+        "next_vax_date",
         "covid_hospitalisation_date",
         "covid_emergency_date",
         "covid_severe_date",
         "covid_death_date",
         "died_any_date",
-        "dereg_date"
+        "dereg_date",
+        "tte_stop_severe_date",
+        "tte_stop_death_date",
+        "fup_severe",
+        "ind_severe",
+        "fup_death",
+        "ind_death",
+        "tte_stop_severe_sens",
+        "tte_stop_death_sens",
+        "fup_severe_sens",
+        "ind_severe_sens",
+        "fup_death_sens",
+        "ind_death_sens"
     ]
 }
