--- a/project.yaml
+++ b/project.yaml
@@ -104,3 +104,39 @@ actions:
       moderately_sensitive:
         table: output/table_1/table_1_wave4_radio_chemo.html
         csv: output/table_1/table_1_wave4_radio_chemo.csv
+
+  # Table - incidence rates
+  table_ir_wave4_transplant:
+    run: r:latest analysis/table_ir.R wave4 transplant
+    needs: [filter_data_wave4]
+    outputs:
+      moderately_sensitive:
+        csv: output/table_ir/table_ir_wave4_transplant.csv
+
+  table_ir_wave4_haem_cancer:
+    run: r:latest analysis/table_ir.R wave4 haem_cancer
+    needs: [filter_data_wave4]
+    outputs:
+      moderately_sensitive:
+        csv: output/table_ir/table_ir_wave4_haem_cancer.csv
+
+  table_ir_wave4_imm:
+    run: r:latest analysis/table_ir.R wave4 imm
+    needs: [filter_data_wave4]
+    outputs:
+      moderately_sensitive:
+        csv: output/table_ir/table_ir_wave4_imm.csv
+
+  table_ir_wave4_imd:
+    run: r:latest analysis/table_ir.R wave4 imd
+    needs: [filter_data_wave4]
+    outputs:
+      moderately_sensitive:
+        csv: output/table_ir/table_ir_wave4_imd.csv
+
+  table_ir_wave4_radio_chemo:
+    run: r:latest analysis/table_ir.R wave4 radio_chemo
+    needs: [filter_data_wave4]
+    outputs:
+      moderately_sensitive:
+        csv: output/table_ir/table_ir_wave4_radio_chemo.csv
