--- a/project.yaml
+++ b/project.yaml
@@ -44,6 +44,15 @@ actions:
       moderately_sensitive:
         csv: output/flowchart/flowchart_wave4.csv
 
+  # Immunosuppression combinations
+  imm_comb_wave4:
+    run: r:latest analysis/imm_comb.R wave4
+    needs: [filter_data_wave4]
+    outputs:
+      moderately_sensitive:
+        csv1: output/imm_comb/imm_comb_wave4_broad.csv
+        csv2: output/imm_comb/imm_comb_wave4_narrow.csv
+
   # Table 1
   table_1_wave4_all:
     run: r:latest analysis/table_1.R wave4 all
