Updated data processing

--- a/analysis/config.json
+++ b/analysis/config.json
@@ -20,15 +20,19 @@
         "kidney_transplant_date",
         "other_organ_transplant",
         "other_organ_transplant_date",
-        "bone_marrow_transplant",
-        "bone_marrow_transplant_date",
         "any_transplant",
         "any_transplant_date",
         "any_transplant_type",
         "any_transplant_cat",
+        "bone_marrow_transplant",
+        "bone_marrow_transplant_date",
         "haem_cancer",
         "haem_cancer_date",
         "haem_cancer_cat",
+        "any_bone_marrow",
+        "any_bone_marrow_date",
+        "any_bone_marrow_type",
+        "any_bone_marrow_cat",
         "immunosuppression_diagnosis",
         "immunosuppression_diagnosis_date",
         "immunosuppression_diagnosis_cat",
@@ -79,7 +83,8 @@
         "n_doses_wave",
         "pre_wave_vaccine_group",
         "pre_wave_last_vax_date",
-        "pre_wave_vax_diff"
+        "pre_wave_vax_diff",
+        "pre_wave_vax_infection_comb"
     ],
     "outcome_vars" : [
         "next_vax_date",
