--- a/project.yaml
+++ b/project.yaml
@@ -123,8 +123,6 @@ actions:
       moderately_sensitive:
         csv: output/table_1/table_1_wave4_collated.csv
 
-
-
   # Table - incidence rates
   calc_ir_hr_wave4_Tx:
     run: r:latest analysis/calc_ir_hr.R wave4 Tx
@@ -165,6 +163,7 @@ actions:
       moderately_sensitive:
         csv1: output/table_ir_hr/table_ir_hr_wave4_IMD.csv
         csv2: output/table_ir_hr/table_ir_hr_wave4_IMD_simple.csv
+
 
 
   ## WAVE 3 ##
@@ -276,8 +275,6 @@ actions:
       moderately_sensitive:
         csv: output/table_1/table_1_wave3_collated.csv
 
-
-
   # Table - incidence rates
   calc_ir_hr_wave3_Tx:
     run: r:latest analysis/calc_ir_hr.R wave3 Tx
@@ -318,3 +315,307 @@ actions:
       moderately_sensitive:
         csv1: output/table_ir_hr/table_ir_hr_wave3_IMD.csv
         csv2: output/table_ir_hr/table_ir_hr_wave3_IMD_simple.csv
+
+
+
+  ## WAVE 2 ##
+
+  # Extract data
+  generate_study_population_wave2:
+    run: >
+      cohortextractor:latest generate_cohort
+        --study-definition study_definition_wave2
+        --skip-existing
+        --output-format=csv.gz
+    outputs:
+      highly_sensitive:
+        cohort: output/input_wave2.csv.gz
+
+  # Process data
+  process_data_wave2:
+    run: r:latest analysis/data_process.R wave2
+    needs: [generate_study_population_wave2]
+    outputs:
+      highly_sensitive:
+        rds: output/processed/input_wave2.rds
+        
+  # Skim data
+  skim_data_wave2:
+    run: r:latest analysis/data_skim.R output/processed/input_wave2.rds output/data_properties
+    needs: [process_data_wave2]
+    outputs:
+      moderately_sensitive:
+        txt1: output/data_properties/input_wave2_skim.txt
+        txt2: output/data_properties/input_wave2_coltypes.txt
+        txt3: output/data_properties/input_wave2_tabulate.txt
+        
+  # Filter data
+  filter_data_wave2:
+    run: r:latest analysis/data_selection.R wave2
+    needs: [process_data_wave2]
+    outputs:
+      highly_sensitive:
+        rds: output/filtered/input_wave2.rds
+      moderately_sensitive:
+        csv: output/flowchart/flowchart_wave2.csv
+
+  # Table 1
+  table_1_wave2_all:
+    run: r:latest analysis/table_1.R wave2 all
+    needs: [filter_data_wave2]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave2_all.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave2_all.html
+        csv: output/table_1/table_1_wave2_all.csv
+        
+  table_1_wave2_Tx:
+    run: r:latest analysis/table_1.R wave2 Tx
+    needs: [filter_data_wave2]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave2_Tx.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave2_Tx.html
+        csv: output/table_1/table_1_wave2_Tx.csv
+
+  table_1_wave2_HC:
+    run: r:latest analysis/table_1.R wave2 HC
+    needs: [filter_data_wave2]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave2_HC.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave2_HC.html
+        csv: output/table_1/table_1_wave2_HC.csv
+
+  table_1_wave2_RC:
+    run: r:latest analysis/table_1.R wave2 RC
+    needs: [filter_data_wave2]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave2_RC.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave2_RC.html
+        csv: output/table_1/table_1_wave2_RC.csv
+        
+  table_1_wave2_IMM:
+    run: r:latest analysis/table_1.R wave2 IMM
+    needs: [filter_data_wave2]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave2_IMM.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave2_IMM.html
+        csv: output/table_1/table_1_wave2_IMM.csv
+
+  table_1_wave2_IMD:
+    run: r:latest analysis/table_1.R wave2 IMD
+    needs: [filter_data_wave2]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave2_IMD.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave2_IMD.html
+        csv: output/table_1/table_1_wave2_IMD.csv
+
+  collate_table_1_wave2:
+    run: r:latest analysis/collate_table_1.R wave2
+    needs: [table_1_wave2_all, table_1_wave2_Tx, table_1_wave2_HC, table_1_wave2_RC, table_1_wave2_IMM, table_1_wave2_IMD]
+    outputs:
+      moderately_sensitive:
+        csv: output/table_1/table_1_wave2_collated.csv
+
+  # Table - incidence rates
+  calc_ir_hr_wave2_Tx:
+    run: r:latest analysis/calc_ir_hr.R wave2 Tx
+    needs: [filter_data_wave2]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave2_Tx.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave2_Tx_simple.csv
+
+  calc_ir_hr_wave2_HC:
+    run: r:latest analysis/calc_ir_hr.R wave2 HC
+    needs: [filter_data_wave2]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave2_HC.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave2_HC_simple.csv
+
+  calc_ir_hr_wave2_RC:
+    run: r:latest analysis/calc_ir_hr.R wave2 RC
+    needs: [filter_data_wave2]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave2_RC.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave2_RC_simple.csv
+
+  calc_ir_hr_wave2_IMM:
+    run: r:latest analysis/calc_ir_hr.R wave2 IMM
+    needs: [filter_data_wave2]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave2_IMM.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave2_IMM_simple.csv
+
+  calc_ir_hr_wave2_IMD:
+    run: r:latest analysis/calc_ir_hr.R wave2 IMD
+    needs: [filter_data_wave2]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave2_IMD.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave2_IMD_simple.csv
+
+
+
+  ## WAVE 1 ##
+
+  # Extract data
+  generate_study_population_wave1:
+    run: >
+      cohortextractor:latest generate_cohort
+        --study-definition study_definition_wave1
+        --skip-existing
+        --output-format=csv.gz
+    outputs:
+      highly_sensitive:
+        cohort: output/input_wave1.csv.gz
+
+  # Process data
+  process_data_wave1:
+    run: r:latest analysis/data_process.R wave1
+    needs: [generate_study_population_wave1]
+    outputs:
+      highly_sensitive:
+        rds: output/processed/input_wave1.rds
+        
+  # Skim data
+  skim_data_wave1:
+    run: r:latest analysis/data_skim.R output/processed/input_wave1.rds output/data_properties
+    needs: [process_data_wave1]
+    outputs:
+      moderately_sensitive:
+        txt1: output/data_properties/input_wave1_skim.txt
+        txt2: output/data_properties/input_wave1_coltypes.txt
+        txt3: output/data_properties/input_wave1_tabulate.txt
+        
+  # Filter data
+  filter_data_wave1:
+    run: r:latest analysis/data_selection.R wave1
+    needs: [process_data_wave1]
+    outputs:
+      highly_sensitive:
+        rds: output/filtered/input_wave1.rds
+      moderately_sensitive:
+        csv: output/flowchart/flowchart_wave1.csv
+
+  # Table 1
+  table_1_wave1_all:
+    run: r:latest analysis/table_1.R wave1 all
+    needs: [filter_data_wave1]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave1_all.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave1_all.html
+        csv: output/table_1/table_1_wave1_all.csv
+        
+  table_1_wave1_Tx:
+    run: r:latest analysis/table_1.R wave1 Tx
+    needs: [filter_data_wave1]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave1_Tx.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave1_Tx.html
+        csv: output/table_1/table_1_wave1_Tx.csv
+
+  table_1_wave1_HC:
+    run: r:latest analysis/table_1.R wave1 HC
+    needs: [filter_data_wave1]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave1_HC.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave1_HC.html
+        csv: output/table_1/table_1_wave1_HC.csv
+
+  table_1_wave1_RC:
+    run: r:latest analysis/table_1.R wave1 RC
+    needs: [filter_data_wave1]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave1_RC.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave1_RC.html
+        csv: output/table_1/table_1_wave1_RC.csv
+        
+  table_1_wave1_IMM:
+    run: r:latest analysis/table_1.R wave1 IMM
+    needs: [filter_data_wave1]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave1_IMM.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave1_IMM.html
+        csv: output/table_1/table_1_wave1_IMM.csv
+
+  table_1_wave1_IMD:
+    run: r:latest analysis/table_1.R wave1 IMD
+    needs: [filter_data_wave1]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave1_IMD.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave1_IMD.html
+        csv: output/table_1/table_1_wave1_IMD.csv
+
+  collate_table_1_wave1:
+    run: r:latest analysis/collate_table_1.R wave1
+    needs: [table_1_wave1_all, table_1_wave1_Tx, table_1_wave1_HC, table_1_wave1_RC, table_1_wave1_IMM, table_1_wave1_IMD]
+    outputs:
+      moderately_sensitive:
+        csv: output/table_1/table_1_wave1_collated.csv
+
+  # Table - incidence rates
+  calc_ir_hr_wave1_Tx:
+    run: r:latest analysis/calc_ir_hr.R wave1 Tx
+    needs: [filter_data_wave1]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave1_Tx.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave1_Tx_simple.csv
+
+  calc_ir_hr_wave1_HC:
+    run: r:latest analysis/calc_ir_hr.R wave1 HC
+    needs: [filter_data_wave1]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave1_HC.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave1_HC_simple.csv
+
+  calc_ir_hr_wave1_RC:
+    run: r:latest analysis/calc_ir_hr.R wave1 RC
+    needs: [filter_data_wave1]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave1_RC.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave1_RC_simple.csv
+
+  calc_ir_hr_wave1_IMM:
+    run: r:latest analysis/calc_ir_hr.R wave1 IMM
+    needs: [filter_data_wave1]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave1_IMM.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave1_IMM_simple.csv
+
+  calc_ir_hr_wave1_IMD:
+    run: r:latest analysis/calc_ir_hr.R wave1 IMD
+    needs: [filter_data_wave1]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave1_IMD.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave1_IMD_simple.csv
