--- a/project.yaml
+++ b/project.yaml
@@ -5,6 +5,168 @@ expectations:
 
 actions:
 
+
+  ## WAVE 5 ##
+
+  # Extract data
+  generate_study_population_wave5:
+    run: >
+      cohortextractor:latest generate_cohort
+        --study-definition study_definition_wave5
+        --skip-existing
+        --output-format=csv.gz
+    outputs:
+      highly_sensitive:
+        cohort: output/input_wave5.csv.gz
+
+  # Process data
+  process_data_wave5:
+    run: r:latest analysis/data_process.R wave5
+    needs: [generate_study_population_wave5]
+    outputs:
+      highly_sensitive:
+        rds: output/processed/input_wave5.rds
+        
+  # Skim data
+  skim_data_wave5:
+    run: r:latest analysis/data_skim.R output/processed/input_wave5.rds output/data_properties
+    needs: [process_data_wave5]
+    outputs:
+      moderately_sensitive:
+        txt1: output/data_properties/input_wave5_skim.txt
+        txt2: output/data_properties/input_wave5_coltypes.txt
+        txt3: output/data_properties/input_wave5_tabulate.txt
+        
+  # Filter data
+  filter_data_wave5:
+    run: r:latest analysis/data_selection.R wave5
+    needs: [process_data_wave5]
+    outputs:
+      highly_sensitive:
+        rds: output/filtered/input_wave5.rds
+      moderately_sensitive:
+        csv: output/flowchart/flowchart_wave5.csv
+
+  # Immunosuppression combinations
+  imm_comb_wave5:
+    run: r:latest analysis/imm_comb.R wave5
+    needs: [filter_data_wave5]
+    outputs:
+      moderately_sensitive:
+        csv1: output/imm_comb/imm_comb_wave5_broad.csv
+        csv2: output/imm_comb/imm_comb_wave5_narrow.csv
+
+  # Table 1
+  table_1_wave5_all:
+    run: r:latest analysis/table_1.R wave5 all
+    needs: [filter_data_wave5]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave5_all.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave5_all.html
+        csv: output/table_1/table_1_wave5_all.csv
+        
+  table_1_wave5_Tx:
+    run: r:latest analysis/table_1.R wave5 Tx
+    needs: [filter_data_wave5]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave5_Tx.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave5_Tx.html
+        csv: output/table_1/table_1_wave5_Tx.csv
+
+  table_1_wave5_HC:
+    run: r:latest analysis/table_1.R wave5 HC
+    needs: [filter_data_wave5]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave5_HC.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave5_HC.html
+        csv: output/table_1/table_1_wave5_HC.csv
+
+  table_1_wave5_RC:
+    run: r:latest analysis/table_1.R wave5 RC
+    needs: [filter_data_wave5]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave5_RC.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave5_RC.html
+        csv: output/table_1/table_1_wave5_RC.csv
+        
+  table_1_wave5_IMM:
+    run: r:latest analysis/table_1.R wave5 IMM
+    needs: [filter_data_wave5]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave5_IMM.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave5_IMM.html
+        csv: output/table_1/table_1_wave5_IMM.csv
+
+  table_1_wave5_IMD:
+    run: r:latest analysis/table_1.R wave5 IMD
+    needs: [filter_data_wave5]
+    outputs:
+      highly_sensitive:
+        data: output/table_1/table_1_wave5_IMD.rds
+      moderately_sensitive:
+        table: output/table_1/table_1_wave5_IMD.html
+        csv: output/table_1/table_1_wave5_IMD.csv
+
+  collate_table_1_wave5:
+    run: r:latest analysis/collate_table_1.R wave5
+    needs: [table_1_wave5_all, table_1_wave5_Tx, table_1_wave5_HC, table_1_wave5_RC, table_1_wave5_IMM, table_1_wave5_IMD]
+    outputs:
+      moderately_sensitive:
+        csv: output/table_1/table_1_wave5_collated.csv
+
+  # Table - incidence rates
+  calc_ir_hr_wave5_Tx:
+    run: r:latest analysis/calc_ir_hr.R wave5 Tx
+    needs: [filter_data_wave5]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave5_Tx.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave5_Tx_simple.csv
+
+  calc_ir_hr_wave5_HC:
+    run: r:latest analysis/calc_ir_hr.R wave5 HC
+    needs: [filter_data_wave5]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave5_HC.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave5_HC_simple.csv
+
+  calc_ir_hr_wave5_RC:
+    run: r:latest analysis/calc_ir_hr.R wave5 RC
+    needs: [filter_data_wave5]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave5_RC.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave5_RC_simple.csv
+
+  calc_ir_hr_wave5_IMM:
+    run: r:latest analysis/calc_ir_hr.R wave5 IMM
+    needs: [filter_data_wave5]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave5_IMM.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave5_IMM_simple.csv
+
+  calc_ir_hr_wave5_IMD:
+    run: r:latest analysis/calc_ir_hr.R wave5 IMD
+    needs: [filter_data_wave5]
+    outputs:
+      moderately_sensitive:
+        csv1: output/table_ir_hr/table_ir_hr_wave5_IMD.csv
+        csv2: output/table_ir_hr/table_ir_hr_wave5_IMD_simple.csv
+
+
+
   ## WAVE 4 ##
 
   # Extract data
