--- a/analysis/config.json
+++ b/analysis/config.json
@@ -13,6 +13,7 @@
         "sex",
         "ethnicity_primary",
         "ethnicity",
+        "ethnicity_broad",
         "region",
         "imd",
         "care_home",
