--- a/project.yaml
+++ b/project.yaml
@@ -812,16 +812,23 @@ actions:
         csv: output/table_ir_hr/table_ir_hr_wave1_collated.csv
 
   # Collate tables all waves
+  collate_flow_all_waves:
+    run: r:latest analysis/collate_flow_all_waves.R
+    needs: [filter_data_wave1, filter_data_wave2, filter_data_wave3, filter_data_wave4, filter_data_wavejn1]
+    outputs:
+      moderately_sensitive:
+        csv: output/collated/flowchart_collated_all_waves.csv
+
   collate_table_1_all_waves:
     run: r:latest analysis/collate_table_1_all_waves.R
     needs: [collate_table_1_wave1, collate_table_1_wave2, collate_table_1_wave3, collate_table_1_wave4, collate_table_1_wavejn1]
     outputs:
       moderately_sensitive:
-        csv: output/table_1/table_1_collated_all_waves.csv
+        csv: output/collated/table_1_collated_all_waves.csv
         
   collate_ir_hr_all_waves:
     run: r:latest analysis/collate_ir_hr_all_waves.R
     needs: [collate_ir_hr_wave1, collate_ir_hr_wave2, collate_ir_hr_wave3, collate_ir_hr_wave4, collate_ir_hr_wavejn1]
     outputs:
       moderately_sensitive:
-        csv: output/table_ir_hr/table_ir_hr_collated_all_waves.csv
+        csv: output/collated/table_ir_hr_collated_all_waves.csv
